--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/duck-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kongwarit Utapao - Homepage</title>
     <!-- The script is fix a bug which causes the screen to flash when dark theme is applied -->
